fix footer on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,6 @@
   
     @media (max-width: 700px) {
         .footer {
-            padding: 5% 20% 5% 20%;
         
             .content {
                 gap:40px;
